# RealEstate

./: IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_TESTING_STATUS.md  PHASE3_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CODE_SIGNING.md  RELEASE_PROCESS.md  USER_GUIDE.md
scripts/: clean-full.sh  clean-heavy.sh  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240101000001_initial.sql  20240201000001_phase3_enhancements.sql
src-tauri/src/: error.rs  lib.rs  license.rs  main.rs
src-tauri/src/ai/: brand_voice.rs  client.rs  email_generator.rs  listing_generator.rs  mod.rs  prompts.rs  social_generator.rs
src-tauri/src/commands/: analytics.rs  brand_voice.rs  export.rs  generate.rs  import.rs  license.rs  mod.rs  photos.rs  property.rs  settings.rs
src-tauri/src/db/: analytics.rs  brand_voice.rs  listings.rs  mod.rs  photos.rs  properties.rs  settings.rs
src-tauri/src/export/: docx.rs  mod.rs  pdf.rs  templates.rs
src-tauri/src/import/: csv.rs
src-tauri/src/photos/: manager.rs
src-tauri/tests/: mod.rs
src-tauri/tests/ai/: mod.rs
src-tauri/tests/commands/: mod.rs  property_test.rs  settings_test.rs
src-tauri/tests/common/: db_setup.rs  fixtures.rs  mock_api.rs  mod.rs
src-tauri/tests/db/: mod.rs
src-tauri/tests/integration/: e2e_test.rs  mod.rs
(+57 files in other folders)
